download-media/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: jackett

  template:
    metadata:
      labels:
        app: jackett

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9117
              name: http

          volumeMounts:
            - name: config
              mountPath: /config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-pvc-config
