download-media/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: prowlarr

  template:
    metadata:
      labels:
        app: prowlarr

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9696
              name: http

          volumeMounts:
            - name: config
              mountPath: /config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-pvc-config
