download-media/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: qbittorrent

  template:
    metadata:
      labels:
        app: qbittorrent

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8090
              name: http
              protocol: TCP

            - containerPort: 6881
              name: bittorrent-tcp
              protocol: TCP

            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP

          volumeMounts:
            - name: config
              mountPath: /config

            - name: downloads
              mountPath: /downloads
              readOnly: true

            - name: tvshows
              mountPath: /storage/TV
              readOnly: true

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-pvc-config

        - name: downloads
          hostPath:
            path: /mnt/storage/torrents
            type: Directory
