download-media/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: radarr

  template:
    metadata:
      labels:
        app: radarr

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 7878
              name: http

          volumeMounts:
            - name: config
              mountPath: /config

            - name: downloads
              mountPath: /downloads
              readOnly: true

            - name: movies
              mountPath: /storage/Movies
              readOnly: true

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-pvc-config

        - name: downloads
          hostPath:
            path: /mnt/storage/torrents
            type: Directory

        - name: movies
          hostPath:
            path: /mnt/media/movies
            type: Directory
