download-media/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: homeserver
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sonarr

  template:
    metadata:
      labels:
        app: sonarr

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8989
              name: http

          volumeMounts:
            - name: config
              mountPath: /config

            - name: downloads
              mountPath: /downloads
              readOnly: true

            - name: tvshows
              mountPath: /storage/TV
              readOnly: true

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc-config

        - name: downloads
          hostPath:
            path: /mnt/storage/torrents
            type: Directory

        - name: tvshows
          hostPath:
            path: /mnt/storage/media/tv
            type: Directory
