download-media/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: homeserver
spec:
  selector:
    app: prowlarr

  ports:
  - port: 9696
    targetPort: 9696

  type: ClusterIP
