download-media/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: homeserver
spec:
  selector:
    app: radarr

  ports:
  - port: 7878
    targetPort: 7878

  type: ClusterIP
