download-media/jackett-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - jackett.homeserver.local

  rules:
  - backendRefs:
    - name: jackett-svc
      port: 9117
