download-media/prowlarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - prowlarr.homeserver.local

  rules:
  - backendRefs:
    - name: prowlarr-svc
      port: 9696
