download-media/qbittorrent-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - qbittorrent.homeserver.local

  rules:
  - backendRefs:
    - name: qbittorrent-svc
      port: 8090
