download-media/radarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - radarr.homeserver.local

  rules:
  - backendRefs:
    - name: radarr-svc
      port: 7878
