download-media/sonarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - sonarr.homeserver.local

  rules:
  - backendRefs:
    - name: sonarr-svc
      port: 8989
